force-app/main/default/objects/Opportunity/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>If Account Short Name is filled, show it - else show normal Account Name</description>
    <formula>IF(ISBLANK(Account.Account_Short_Name__c) , Account.Name, Account.Account_Short_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>