force-app/main/default/objects/Opportunity/fields/Amount_FP__c.field-meta.xml
<CustomField>
    <fullName>Amount_FP__c</fullName>
    <description>Amount for Fixed Price record type</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>