force-app/main/default/objects/Opportunity/fields/Amount_frm__c.field-meta.xml
<CustomField>
    <fullName>Amount_frm__c</fullName>
    <formula>IF( ISPICKVAL(Type , &apos;Fix&apos;) , Amount_FP__c, Amount_TM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>