force-app/main/default/objects/Opportunity/fields/Amount_per_month__c.field-meta.xml
<CustomField>
    <fullName>Amount_per_month__c</fullName>
    <formula>21 * Amount_TM__c / ContractLengthInDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>