force-app/main/default/objects/Opportunity/fields/Amount_TM__c.field-meta.xml
<CustomField>
    <fullName>Amount_TM__c</fullName>
    <description>Amount for Time &amp; Material record type</description>
    <formula>Placement__c * Rate__c * Contract_Logic__c * 8 * Contract_Duration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>