force-app/main/default/objects/Opportunity/fields/ASAP__c.field-meta.xml
<CustomField>
    <fullName>ASAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASAP</label>
    <type>Checkbox</type>
</CustomField>