force-app/main/default/objects/Opportunity/fields/AssociatedResourceRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>AssociatedResourceRequestNumber__c</fullName>
    <formula>Resource_Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Resource Request Number</label>
    <type>Text</type>
</CustomField>