force-app/main/default/objects/Opportunity/fields/Close_Details__c.field-meta.xml
<CustomField>
    <fullName>Close_Details__c</fullName>
    <description>Details for Opportunity stage Close Won or Lost</description>
    <label>Close Details</label>
    <type>TextArea</type>
</CustomField>