force-app/main/default/objects/Opportunity/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Rate too low</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No qualifications</fullName>
            </value>
            <value>
                <fullName>Client has resigned</fullName>
            </value>
            <value>
                <fullName>No available resources</fullName>
            </value>
            <value>
                <fullName>Not enough time to deliver</fullName>
            </value>
            <value>
                <fullName>Competition candidate was selected</fullName>
            </value>
            <value>
                <fullName>Candidate was poorly assessed</fullName>
            </value>
            <value>
                <fullName>Candidate has reisgned</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quickness</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>