force-app/main/default/objects/Opportunity/fields/Contract_Duration_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_Number__c</fullName>
    <label>Contract Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>