force-app/main/default/objects/Opportunity/fields/Contract_Logic__c.field-meta.xml
<CustomField>
    <fullName>Contract_Logic__c</fullName>
    <formula>IF( ISPICKVAL(Contract_Duration__c, &quot;Week(s)&quot;), 5,  IF(ISPICKVAL(Contract_Duration__c, &quot;Month(s)&quot;), 21, 1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Logic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>