force-app/main/default/objects/Opportunity/fields/ContractEnd__c.field-meta.xml
<CustomField>
    <fullName>ContractEnd__c</fullName>
    <inlineHelpText>Specify the end date of the contract</inlineHelpText>
    <label>Contract end</label>
    <type>Date</type>
</CustomField>