force-app/main/default/objects/Opportunity/fields/ContractEnd_frm__c.field-meta.xml
<CustomField>
    <fullName>ContractEnd_frm__c</fullName>
    <formula>ContractStart__c + IF(TEXT(Contract_Duration__c ) = &apos;Day(s)&apos;, Contract_Duration_Number__c, IF(TEXT(Contract_Duration__c ) = &apos;Week(s)&apos;,Contract_Duration_Number__c * 7, Contract_Duration_Number__c * 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End</label>
    <type>Date</type>
</CustomField>