force-app/main/default/objects/Opportunity/fields/ContractLengthInDays__c.field-meta.xml
<CustomField>
    <fullName>ContractLengthInDays__c</fullName>
    <formula>Contract_Duration_Number__c * Contract_Logic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract length (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>