force-app/main/default/objects/Opportunity/fields/ContractStart__c.field-meta.xml
<CustomField>
    <fullName>ContractStart__c</fullName>
    <inlineHelpText>Specify the start date of the contract</inlineHelpText>
    <label>Contract start</label>
    <type>Date</type>
</CustomField>