force-app/main/default/objects/Opportunity/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>