force-app/main/default/objects/Opportunity/fields/CurrentMonthAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentMonthAmount__c</fullName>
    <label>Current Month Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>