force-app/main/default/objects/Opportunity/fields/CVDeliveryDeadline__c.field-meta.xml
<CustomField>
    <fullName>CVDeliveryDeadline__c</fullName>
    <label>CV delivery deadline</label>
    <type>Date</type>
</CustomField>