force-app/main/default/objects/Opportunity/fields/CVLanguage__c.field-meta.xml
<CustomField>
    <fullName>CVLanguage__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Polish</fullName>
                <default>true</default>
                <label>Polish</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Polish or English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>