force-app/main/default/objects/Opportunity/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <description>Guidance text for Opportunity - stage dependant</description>
    <formula>IF(ISPICKVAL(StageName , &apos;Draft&apos;), $Label.Opportunity_Guidance_Draft, 
  IF(ISPICKVAL(StageName , &apos;In progress&apos;), $Label.Opportunity_Guidance_InProgress, 
    IF(ISPICKVAL(StageName , &apos;Customer&apos;), $Label.Opportunity_Guidance_Customer, 
      IF(ISPICKVAL(StageName , &apos;Approved&apos;), $Label.Opportunity_Guidance_Approved, &apos;No guidance available&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guidance Information</label>
    <type>Text</type>
</CustomField>