force-app/main/default/objects/Opportunity/fields/Last_Stage_Before_Close_Lost__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Before_Close_Lost__c</fullName>
    <label>Last Stage Before Close Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>