force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Too low rate</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No qualifications</fullName>
            </value>
            <value>
                <fullName>Client has resigned</fullName>
            </value>
            <value>
                <fullName>We don&apos;t have proper manpower</fullName>
            </value>
            <value>
                <fullName>Not enough time to deliver</fullName>
            </value>
            <value>
                <fullName>Candidate withdrew</fullName>
            </value>
            <value>
                <fullName>Too low/high rate</fullName>
            </value>
            <value>
                <fullName>Competition candidate was selected</fullName>
            </value>
            <value>
                <fullName>Candidate was poorly assessed</fullName>
            </value>
            <value>
                <fullName>Candidate has reisgned</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>