force-app/main/default/objects/Opportunity/fields/NextMonthAmount__c.field-meta.xml
<CustomField>
    <fullName>NextMonthAmount__c</fullName>
    <label>Next Month Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>