force-app/main/default/objects/Opportunity/fields/NextStep__c.field-meta.xml
<CustomField>
    <fullName>NextStep__c</fullName>
    <inlineHelpText>Next Step Description</inlineHelpText>
    <label>Next Step</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>