force-app/main/default/objects/Opportunity/fields/NextStepDeadline__c.field-meta.xml
<CustomField>
    <fullName>NextStepDeadline__c</fullName>
    <label>Next Step Deadline</label>
    <type>Date</type>
</CustomField>