force-app/main/default/objects/Opportunity/fields/OpportunityStart__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStart__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Work Start Date</label>
    <type>Date</type>
</CustomField>