force-app/main/default/objects/Opportunity/fields/OtherLocation__c.field-meta.xml
<CustomField>
    <fullName>OtherLocation__c</fullName>
    <label>Other Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>