force-app/main/default/objects/Opportunity/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <inlineHelpText>Number of Specialists</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>