force-app/main/default/objects/Opportunity/fields/Priority_Marker__c.field-meta.xml
<CustomField>
    <fullName>Priority_Marker__c</fullName>
    <formula>IMAGE(Priority_Marker_URL__c, &quot;Icon&quot;, 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Marker</label>
    <type>Text</type>
</CustomField>