force-app/main/default/objects/Opportunity/fields/Priority_Marker_Small__c.field-meta.xml
<CustomField>
    <fullName>Priority_Marker_Small__c</fullName>
    <description>Icon for Priority on List View</description>
    <formula>IMAGE(Priority_Marker_URL__c, &quot;Icon&quot;, 15, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Marker</label>
    <type>Text</type>
</CustomField>