force-app/main/default/objects/Opportunity/fields/Priority_Marker_URL__c.field-meta.xml
<CustomField>
    <fullName>Priority_Marker_URL__c</fullName>
    <formula>IF(
ISPICKVAL(Priority__c, &quot;No Competitors&quot;),
 &quot;/servlet/servlet.FileDownload?file=01558000000AqQN&quot;,
  &quot;/servlet/servlet.FileDownload?file=01558000000AqQL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Marker URL</label>
    <type>Text</type>
</CustomField>