force-app/main/default/objects/Opportunity/fields/Product_Main_Skills__c.field-meta.xml
<CustomField>
    <fullName>Product_Main_Skills__c</fullName>
    <label>Main Skills (Technology)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>