force-app/main/default/objects/Opportunity/fields/ProductsNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductsNumber__c</fullName>
    <label>Products Number</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>