force-app/main/default/objects/Opportunity/fields/RecrutedBy__c.field-meta.xml
<CustomField>
    <fullName>RecrutedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruted By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Administracja BTN</value>
        </filterItems>
        <filterItems>
            <field>Contact.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recruitment</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>