force-app/main/default/objects/Opportunity/fields/ResourceRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>ResourceRequestNumber__c</fullName>
    <label>Resource Request Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>