force-app/main/default/objects/Opportunity/fields/SalesRepManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>SalesRepManagerEmail__c</fullName>
    <label>Sales Rep Manager Email</label>
    <type>Email</type>
</CustomField>