force-app/main/default/objects/Opportunity/fields/SourceStatusForClosedLost__c.field-meta.xml
<CustomField>
    <fullName>SourceStatusForClosedLost__c</fullName>
    <label>Source status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>