force-app/main/default/objects/Opportunity/fields/Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Stage_Change__c</fullName>
    <label>Stage Change</label>
    <type>DateTime</type>
</CustomField>