force-app/main/default/objects/Opportunity/fields/Stage_Details__c.field-meta.xml
<CustomField>
    <fullName>Stage_Details__c</fullName>
    <label>Stage Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Skills on the market</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Candidate has withdrawn</fullName>
            </value>
            <value>
                <fullName>Not Enough Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>