force-app/main/default/objects/Opportunity/fields/Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration__c</fullName>
    <description>How many days have passed since last stage change.</description>
    <formula>IF( ISNULL(Stage_Change__c) , 1, (TODAY() - DATEVALUE(Stage_Change__c) + 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows how many days have passed since last stage change.</inlineHelpText>
    <label>Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>