force-app/main/default/objects/Opportunity/fields/Type_frm__c.field-meta.xml
<CustomField>
    <fullName>Type_frm__c</fullName>
    <formula>&apos;Unknown type&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>