force-app/main/default/objects/Opportunity/fields/Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Reason__c</fullName>
    <label>Close Details</label>
    <type>TextArea</type>
</CustomField>