force-app/main/default/objects/Opportunity/fields/WorkStart__c.field-meta.xml
<CustomField>
    <fullName>WorkStart__c</fullName>
    <formula>IF( ASAP__c , TODAY(),  ContractStart__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specify the start date of the contract</inlineHelpText>
    <label>Contract Start</label>
    <type>Date</type>
</CustomField>