force-app/main/default/objects/Opportunity/recordTypes/FixedPrice.recordType-meta.xml
<RecordType>
    <fullName>FixedPrice</fullName>
    <active>false</active>
    <businessProcess>Fixed price sales process</businessProcess>
    <label>Fixed price</label>
</RecordType>