force-app/main/default/objects/Opportunity/recordTypes/Support.recordType-meta.xml
<RecordType>
    <fullName>Support</fullName>
    <active>false</active>
    <businessProcess>Fixed price sales process</businessProcess>
    <label>Support</label>
</RecordType>