force-app/main/default/objects/Opportunity/recordTypes/TimeMaterial.recordType-meta.xml
<RecordType>
    <fullName>TimeMaterial</fullName>
    <active>true</active>
    <businessProcess>Time material sales process</businessProcess>
    <label>Time &amp; Material</label>
</RecordType>