force-app/main/default/objects/Opportunity/validationRules/CloseDetailsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseDetailsMandatory</fullName>
    <active>true</active>
    <description>If Close Reason is OTHER, then Close Details is mandatory</description>
    <errorConditionFormula>AND(ISPICKVAL(Close_Reason__c, &apos;Other&apos;), ISPICKVAL(StageName, &apos;Closed Lost&apos;), Close_Details__c = NULL)</errorConditionFormula>
    <errorDisplayField>Close_Details__c</errorDisplayField>
    <errorMessage>Please provide explanation.</errorMessage>
</ValidationRule>