force-app/main/default/objects/Opportunity/validationRules/ContractStartMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractStartMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL(StageName , &apos;In progress&apos;), 
		ISPICKVAL(StageName , &apos;Customer&apos;), 
		ISPICKVAL(StageName , &apos;Approved&apos;), 
		ISPICKVAL(StageName , &apos;Closed Won&apos;), 
		ISPICKVAL(StageName , &apos;Closed Lost&apos;)), 
	OR(ISBLANK(ContractStart__c ),
	ContractStart__c = NULL)
)</errorConditionFormula>
    <errorDisplayField>ContractStart__c</errorDisplayField>
    <errorMessage>Please provide data</errorMessage>
</ValidationRule>