force-app/main/default/objects/Opportunity/validationRules/DescriptionMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>DescriptionMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL(StageName , &apos;In progress&apos;), 
		ISPICKVAL(StageName , &apos;Customer&apos;), 
		ISPICKVAL(StageName , &apos;Approved&apos;), 
		ISPICKVAL(StageName , &apos;Closed Won&apos;),
		ISPICKVAL(StageName , &apos;Closed Lost&apos;)), 
	OR(ISBLANK(Description),Description = NULL) 
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please provide data</errorMessage>
</ValidationRule>