force-app/main/default/objects/Opportunity/validationRules/LanguageMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>LanguageMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL(StageName , &apos;In progress&apos;), 
		ISPICKVAL(StageName , &apos;Customer&apos;), 
		ISPICKVAL(StageName , &apos;Approved&apos;), 
		ISPICKVAL(StageName , &apos;Closed Won&apos;), 
		ISPICKVAL(StageName , &apos;Closed Lost&apos;)),
	OR(ISBLANK(TEXT(CVLanguage__c)),TEXT(CVLanguage__c) = NULL)
)</errorConditionFormula>
    <errorDisplayField>CVLanguage__c</errorDisplayField>
    <errorMessage>Please provide data</errorMessage>
</ValidationRule>